--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,40 +1,7 @@
 .App {
     text-align: center;
-  }
-  
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
-  
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-  
-  .App-link {
-    color: #61dafb;
-  }
-  
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+    color: #F2F2F3;
+    font-family: 'Jet Brains Mono', Arial, sans-serif;
   }
   
   .main {
@@ -56,6 +23,4 @@
     font-weight: bold;
     font-size: 36px;
     line-height: 40px;
-    color: #F2F2F3;
-    font-family: 'Jet Brains Mono';
   }
