--- a/src/components/appHeader/appHeader.module.css
+++ b/src/components/appHeader/appHeader.module.css
@@ -21,17 +21,15 @@
     grid-template-columns: 1fr 1fr;
 }
 
-.text {
-    color: #8585AD;
+.text {  
     display: grid;
     gap: 8px;
     grid-template-columns: 24px calc(100% - 24px);
     justify-content: space-between;
     align-items: center;
-    font-family: 'Jet Brains Mono';
     font-size: 16px;
 }
 
-.text_type_first {
-    color: #F2F2F3;
+.text_type_last {
+    color: #8585AD;
 }
