--- a/src/components/ingredientDetails/ingredientDetails.module.css
+++ b/src/components/ingredientDetails/ingredientDetails.module.css
@@ -42,7 +42,7 @@
 
 .item__number {
     margin: 0;
-    font-family: 'Iceland';
+    font-family: 'Iceland, Arial, sans-serif';
     font-style: normal;
     font-weight: normal;
     font-size: 28px;
