--- a/src/components/orderDetails/orderDetails.module.css
+++ b/src/components/orderDetails/orderDetails.module.css
@@ -8,8 +8,7 @@
 
 .number {
     margin: 0;
-    color: #F2F2F3;
-    font-family: 'Iceland';
+    font-family: 'Iceland, Arial, sans-serif';
     font-style: normal;
     font-weight: normal;
     font-size: 144px;
@@ -19,8 +18,6 @@
 
 .order {
     margin: 0;
-    color: #F2F2F3;
-    font-family: 'Jet Brains Mono';
     font-style: normal;
     font-weight: bold;
     font-size: 24px;
@@ -35,14 +32,12 @@
 }
 
 .conteiner {
-    font-family: 'Jet Brains Mono';
     font-size: 16px;
     line-height: 24px;
 }
 
 .text {
     margin: 0;
-    color: #F2F2F3;
 }
 
 .text_type_last {
