--- a/src/components/profileForm/profileForm.module.css
+++ b/src/components/profileForm/profileForm.module.css
@@ -3,3 +3,9 @@
     row-gap: 24px;
     justify-content: end;
 }
+
+.buttons {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 24px;
+}
