--- a/src/components/profile/profile.module.css
+++ b/src/components/profile/profile.module.css
@@ -22,6 +22,7 @@
     font-size: 24px;
     line-height: 30px;
     text-align: start;
+    text-decoration: none;
 }
 
 .name_active {
@@ -30,6 +31,7 @@
 
 .text {
     color: #8585AD;
+    text-decoration: none;
     opacity: 0.4;
     font-family: 'Jet Brains Mono', Arial, sans-serif;
     font-size: 16px;
