--- a/src/components/burgerIngredients/burgerIngredients.module.css
+++ b/src/components/burgerIngredients/burgerIngredients.module.css
@@ -15,6 +15,11 @@
     background-color: #8585AD;
 }
 
+.link {
+    text-decoration: none;
+    color: #F2F2F3;
+}
+
 .menu__item {
     margin-top: 40px;
     display: grid;
