--- a/src/components/profile/profile.module.css
+++ b/src/components/profile/profile.module.css
@@ -6,6 +6,11 @@
     column-gap: 60px;
 }
 
+.section_path_order {
+    grid-template-columns: 320px 844px;
+    max-width: 1225px;
+}
+
 .menu {
     display: grid;
     grid-template-rows: repeat(3, 64px);
