--- a/src/components/orders/orders.module.css
+++ b/src/components/orders/orders.module.css
@@ -2,6 +2,16 @@
     margin: 0;
     padding: 0;
     max-height: 852px;
+    overflow-y: scroll;
     display: grid;
     row-gap: 16px;
+}
+
+.orders::-webkit-scrollbar {
+    width: 8px;
+    background-color: #2F2F37;
+}
+
+.orders::-webkit-scrollbar-thumb {
+    background-color: #8585AD;
 }
