--- a/src/components/orderPopup/orderPopup.module.css
+++ b/src/components/orderPopup/orderPopup.module.css
@@ -1,7 +1,7 @@
 .page {
     width: 640px;
     height: 620px;
-    margin: 122px auto 0;
+    margin: 24px auto 50px;
 }
 
 .order__number {
@@ -34,6 +34,17 @@
 
 .info {
     margin: 60px 0 0;
+    height: 59%;
+    overflow-y: scroll;
+}
+
+.info::-webkit-scrollbar {
+    width: 8px;
+    background-color: #2F2F37;
+}
+
+.info::-webkit-scrollbar-thumb {
+    background-color: #8585AD;
 }
 
 .info__title {
