--- a/src/components/orders/orders.module.css
+++ b/src/components/orders/orders.module.css
@@ -1,7 +1,7 @@
 .orders {
     margin: 0;
     padding: 0;
-    max-height: 852px;
+    max-height: calc(100% - 15px);
     overflow-y: scroll;
     display: grid;
     row-gap: 16px;
