--- a/src/pages/feed.module.css
+++ b/src/pages/feed.module.css
@@ -1,5 +1,5 @@
 .page {
-    width: 1248px;
+    width: 63%;
     margin: auto;
     margin-top: 40px;
 }
@@ -18,6 +18,7 @@
     column-gap: 60px;
     grid-template-columns: 608px 580px;
     margin-top: 44px;
+    height: calc(100vh - 100px - 132px);
 }
 
 .orders {
@@ -105,8 +106,8 @@
 
 .statistics {
     display: grid;
-    row-gap: 60px;
-    max-height: 626px;
+    row-gap: 2vh;
+    max-height: calc(100% - 15px);
 }
 
 .statistics__now {
